# ntlm

./: .gitignore  CMakeLists.txt  README.md
include/ntlm/: ntlm.h
src/: ntlm.cpp  ntlm.h  util.cpp  util.h
test/: ApprovalTests.v.10.7.1.hpp  CMakeLists.txt  NtlmTests.cpp  NtlmTests.type1_msg,_Test_domain,_Test_host,_V1.approved.txt  NtlmTests.type1_msg,_Test_domain,_Test_host,_V2.approved.txt  NtlmTests.type3_msg,_test_username,_test_password,_test_domain,_test_host,_V1.approved.txt  NtlmTests.type3_msg,_test_username,_test_password,_test_domain,_test_host,_V2.approved.txt  NtlmTests.type3_msg,_test_username,_test_password,_test_domain,_test_host,_V2Session.approved.txt
